Sets tag line and social networks

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     
     <!--====== Title ======-->
-    <title>Nftfy - SaaS Landing Page</title>
+    <title>Nftfy - NFT Securitizer</title>
     
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -114,7 +114,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="header-hero-content text-center">
-                            <h3 class="header-sub-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Nftfy - SaaS Landing Page</h3>
+                            <h3 class="header-sub-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Nftfy - NFT Securitizer</h3>
                             <h2 class="header-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">You are using free lite version</h2>
                             <p class="text wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">Please, purchase full version of basic to get all features, sections and commercial use license</p>
                             <a href="https://rebrand.ly/basic-ud" rel="nofollow" class="main-btn wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.1s">Launch App</a>
@@ -346,10 +346,11 @@
                             </a>
                             <p class="text">Lorem ipsum dolor sit amet consetetur sadipscing elitr, sederfs diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
                             <ul class="social">
-                                <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                                <li><a href="#"><i class="lni-twitter-filled"></i></a></li>
-                                <li><a href="#"><i class="lni-instagram-filled"></i></a></li>
-                                <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
+                                <li><a href="https://github.com/nftfy"><i class="lni-github-original"></i></a></li>
+                                <!-- li><a href="#"><i class="lni-facebook-filled"></i></a></li -->
+                                <li><a href="https://twitter.com/nftfysec"><i class="lni-twitter-filled"></i></a></li>
+                                <!-- li><a href="#"><i class="lni-instagram-filled"></i></a></li -->
+                                <!-- li><a href="#"><i class="lni-linkedin-original"></i></a></li -->
                             </ul>
                         </div> <!-- footer about -->
                     </div>
