--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#team">Team</a>
                                     </li>
-                                    <li class="nav-item">
+                                    <!-- li class="nav-item">
                                         <a class="page-scroll" href="#blog">Blog</a>
-                                    </li>
+                                    </li -->
                                 </ul>
                             </div> <!-- navbar collapse -->
                             
@@ -406,7 +406,7 @@
                                     <li><a href="#">Home</a></li>
                                     <li><a href="#">Page</a></li>
                                     <li><a href="#">Portfolio</a></li>
-                                    <li><a href="#">Blog</a></li>
+                                    <!-- li><a href="#">Blog</a></li -->
                                     <li><a href="#">Contact</a></li>
                                 </ul>
                             </div> <!-- footer wrapper -->
