--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <div class="header-hero-content text-center">
                             <h3 class="header-sub-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Nftfy - NFT Securitizer</h3>
                             <h2 class="header-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">You are using free lite version</h2>
-                            <p class="text wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">Please, purchase full version of basic to get all features, sections and commercial use license</p>
+                            <p class="text wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">Bring collective ownership and instant liquidity to your ERC-721 tokens</p>
                             <a href="https://rebrand.ly/basic-ud" rel="nofollow" class="main-btn wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.1s">Launch App</a>
                         </div> <!-- header hero content -->
                     </div>
