Adds mailto link

--- a/index.html
+++ b/index.html
@@ -414,9 +414,9 @@
                             </div>
                             <ul class="contact">
                                 <!-- li>+809272561823</li -->
-                                <li>help@nftfy.tk</li>
-                                <li>nftfy.tk</li>
-                                <!-- li>123 Stree New York City , United <br> States Of America 750.</li -->
+                                <li><a href="mailto:help@nftfy.tk">help@nftfy.tk</a></li>
+                                <!-- li>nftfy.tk</li -->
+                                <!-- li>123 Stree New York City, United <br> States Of America 750.</li -->
                             </ul>
                         </div> <!-- footer contact -->
                     </div>
