--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#about">About</a>
                                     </li>
-                                    <li class="nav-item">
+                                    <!-- li class="nav-item">
                                         <a class="page-scroll" href="#facts">Why</a>
-                                    </li>
+                                    </li -->
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#team">Team</a>
                                     </li>
@@ -355,7 +355,7 @@
                     <div class="col-lg-6">
                         <div class="subscribe-form mt-50">
                             <form action="#">
-                                <input type="text" placeholder="Enter email">
+                                <input type="text" placeholder="Enter e-mail">
                                 <button class="main-btn">Subscribe</button>
                             </form>
                         </div>
@@ -383,7 +383,7 @@
                         <div class="footer-link d-flex mt-50 justify-content-md-between">
                             <div class="link-wrapper wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
                                 <div class="footer-title">
-                                    <h4 class="title">Quick Link</h4>
+                                    <h4 class="title">Quick Links</h4>
                                 </div>
                                 <ul class="link">
                                     <li><a href="#">Road Map</a></li>
