--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             </div> <!-- navbar collapse -->
 
                             <div class="navbar-btn d-none d-sm-inline-block">
-                                <a class="main-btn" data-scroll-nav="0" href="#pricing">Whitepaper</a>
+                                <a class="main-btn" data-scroll-nav="0" href="#whitepaper">Whitepaper</a>
                             </div>
                         </nav> <!-- navbar -->
                     </div>
@@ -113,7 +113,7 @@
                     <div class="col-lg-8">
                         <div class="header-hero-content text-center">
                             <h3 class="header-sub-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Nftfy - NFT Securitizer</h3>
-                            <h2 class="header-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">You are using free lite version</h2>
+                            <h2 class="header-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">Securitize Non Fungibles</h2>
                             <p class="text wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">Bring collective ownership and instant liquidity to your ERC-721 tokens</p>
                             <a href="https://rebrand.ly/basic-ud" rel="nofollow" class="main-btn wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.1s">Launch App</a>
                         </div> <!-- header hero content -->
@@ -381,7 +381,7 @@
                     </div>
                     <div class="col-lg-5 col-md-7 col-sm-7">
                         <div class="footer-link d-flex mt-50 justify-content-md-between">
-                            <div class="link-wrapper wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
+                            <!-- div class="link-wrapper wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
                                 <div class="footer-title">
                                     <h4 class="title">Quick Links</h4>
                                 </div>
@@ -392,17 +392,19 @@
                                     <li><a href="#">Terms of Service</a></li>
                                     <li><a href="#">Pricing</a></li>
                                 </ul>
-                            </div> <!-- footer wrapper -->
+                            </div --> <!-- footer wrapper -->
                             <div class="link-wrapper wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
                                 <div class="footer-title">
                                     <h4 class="title">Resources</h4>
                                 </div>
                                 <ul class="link">
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">Page</a></li>
-                                    <li><a href="#">Portfolio</a></li>
+                                    <li><a href="#">Whitepaper</a></li>
+                                    <li><a href="#">Slide Deck</a></li>
+                                    <!-- li><a href="#">Home</a></li -->
+                                    <!-- li><a href="#">Page</a></li -->
+                                    <!-- li><a href="#">Portfolio</a></li -->
                                     <!-- li><a href="#">Blog</a></li -->
-                                    <li><a href="#">Contact</a></li>
+                                    <!-- li><a href="#">Contact</a></li -->
                                 </ul>
                             </div> <!-- footer wrapper -->
                         </div> <!-- footer link -->
