--- a/index.html
+++ b/index.html
@@ -399,7 +399,8 @@
                                 </div>
                                 <ul class="link">
                                     <li><a href="#">Whitepaper</a></li>
-                                    <li><a href="#">Slide Deck</a></li>
+                                    <li><a href="#">Presentation</a></li>
+                                    <li><a href="https://github.com/nftfy/nftfy-core/tree/master/src">Smart Contracts</a></li>
                                     <!-- li><a href="#">Home</a></li -->
                                     <!-- li><a href="#">Page</a></li -->
                                     <!-- li><a href="#">Portfolio</a></li -->
