--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                                     <li><a href="#">Pricing</a></li>
                                 </ul>
                             </div --> <!-- footer wrapper -->
-                            <div class="link-wrapper wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
+                            <div class="link-wrapper wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
                                 <div class="footer-title">
                                     <h4 class="title">Resources</h4>
                                 </div>
@@ -408,20 +408,28 @@
                                     <!-- li><a href="#">Contact</a></li -->
                                 </ul>
                             </div> <!-- footer wrapper -->
+                            <div class="link-wrapper wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
+                                <div class="footer-title">
+                                    <h4 class="title">Contact Us</h4>
+                                </div>
+                                <ul class="link">
+                                    <li><a href="mailto:help@nftfy.tk">help@nftfy.tk</a></li>
+                                </ul>
+                            </div> <!-- footer wrapper -->
                         </div> <!-- footer link -->
                     </div>
                     <div class="col-lg-3 col-md-5 col-sm-5">
-                        <div class="footer-contact mt-50 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.8s">
+                        <!-- div class="footer-contact mt-50 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.8s">
                             <div class="footer-title">
                                 <h4 class="title">Contact Us</h4>
                             </div>
                             <ul class="contact">
-                                <!-- li>+809272561823</li -->
+                                <li>+809272561823</li>
                                 <li><a href="mailto:help@nftfy.tk">help@nftfy.tk</a></li>
-                                <!-- li>nftfy.tk</li -->
-                                <!-- li>123 Stree New York City, United <br> States Of America 750.</li -->
+                                <li>nftfy.tk</li>
+                                <li>123 Stree New York City, United <br> States Of America 750.</li>
                             </ul>
-                        </div> <!-- footer contact -->
+                        </div --> <!-- footer contact -->
                     </div>
                 </div> <!-- row -->
             </div> <!-- footer widget -->
