--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                             <h5 class="holder-name"><a href="#">Isabela Moreira</a></h5>
                             <p class="text">Founder and CEO</p>
                         </div>
-                    </div> 
+                    </div>
                 </div>
                 <div class="col-lg-4 col-md-7 col-sm-8">
                     <div class="single-team text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
@@ -390,7 +390,7 @@
                             <h5 class="holder-name"><a href="#">Elon Musk</a></h5>
                             <p class="text">Sr. Software Engineer</p>
                         </div>
-                    </div> 
+                    </div>
                 </div>
                 <div class="col-lg-4 col-md-7 col-sm-8">
                     <div class="single-team text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.8s">
@@ -409,7 +409,47 @@
                             <h5 class="holder-name"><a href="#">Fiona Smith</a></h5>
                             <p class="text">Business Development Manager</p>
                         </div>
-                    </div> 
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-4 col-md-7 col-sm-8">
+                    <div class="single-team text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+                        <div class="team-image">
+                            <img src="assets/images/team-1.png" alt="Team">
+                            <div class="social">
+                                <ul>
+                                    <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
+                                    <li><a href="#"><i class="lni-twitter-filled"></i></a></li>
+                                    <li><a href="#"><i class="lni-instagram-filled"></i></a></li>
+                                    <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="team-content">
+                            <h5 class="holder-name"><a href="#">Isabela Moreira</a></h5>
+                            <p class="text">Founder and CEO</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-7 col-sm-8">
+                    <div class="single-team text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
+                        <div class="team-image">
+                            <img src="assets/images/team-2.png" alt="Team">
+                            <div class="social">
+                                <ul>
+                                    <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
+                                    <li><a href="#"><i class="lni-twitter-filled"></i></a></li>
+                                    <li><a href="#"><i class="lni-instagram-filled"></i></a></li>
+                                    <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="team-content">
+                            <h5 class="holder-name"><a href="#">Elon Musk</a></h5>
+                            <p class="text">Sr. Software Engineer</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
