--- a/index.html
+++ b/index.html
@@ -360,16 +360,16 @@
                             <img src="assets/images/team-1.png" alt="Team">
                             <div class="social">
                                 <ul>
-                                    <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                                    <li><a href="#"><i class="lni-twitter-filled"></i></a></li>
-                                    <li><a href="#"><i class="lni-instagram-filled"></i></a></li>
-                                    <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
+                                    <!-- li><a href="#"><i class="lni-facebook-filled"></i></a></li -->
+                                    <!-- li><a href="#"><i class="lni-twitter-filled"></i></a></li -->
+                                    <!-- li><a href="#"><i class="lni-instagram-filled"></i></a></li -->
+                                    <li><a href="https://www.linkedin.com/in/leonardoircarvalho"><i class="lni-linkedin-original"></i></a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="team-content">
-                            <h5 class="holder-name"><a href="#">Isabela Moreira</a></h5>
-                            <p class="text">Founder and CEO</p>
+                            <h5 class="holder-name"><a href="#">Leonardo Carvalho</a></h5>
+                            <p class="text">Entrepreneur</p>
                         </div>
                     </div>
                 </div>
@@ -379,16 +379,15 @@
                             <img src="assets/images/team-2.png" alt="Team">
                             <div class="social">
                                 <ul>
-                                    <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                                    <li><a href="#"><i class="lni-twitter-filled"></i></a></li>
-                                    <li><a href="#"><i class="lni-instagram-filled"></i></a></li>
-                                    <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
-                                </ul>
+                                    <!-- li><a href="#"><i class="lni-facebook-filled"></i></a></li -->
+                                    <!-- li><a href="#"><i class="lni-twitter-filled"></i></a></li -->
+                                    <!-- li><a href="#"><i class="lni-instagram-filled"></i></a></li -->
+                                    <li><a href="https://www.linkedin.com/in/andr%C3%A9-salles-9b994816"><i class="lni-linkedin-original"></i></a></li>
                             </div>
                         </div>
                         <div class="team-content">
-                            <h5 class="holder-name"><a href="#">Elon Musk</a></h5>
-                            <p class="text">Sr. Software Engineer</p>
+                            <h5 class="holder-name"><a href="#">Andre Salles</a></h5>
+                            <p class="text">Lawyer</p>
                         </div>
                     </div>
                 </div>
@@ -398,16 +397,16 @@
                             <img src="assets/images/team-3.png" alt="Team">
                             <div class="social">
                                 <ul>
-                                    <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                                    <li><a href="#"><i class="lni-twitter-filled"></i></a></li>
-                                    <li><a href="#"><i class="lni-instagram-filled"></i></a></li>
-                                    <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
+                                    <!-- li><a href="#"><i class="lni-facebook-filled"></i></a></li -->
+                                    <!-- li><a href="#"><i class="lni-twitter-filled"></i></a></li -->
+                                    <!-- li><a href="#"><i class="lni-instagram-filled"></i></a></li -->
+                                    <li><a href="https://www.linkedin.com/in/antoniohoffert"><i class="lni-linkedin-original"></i></a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="team-content">
-                            <h5 class="holder-name"><a href="#">Fiona Smith</a></h5>
-                            <p class="text">Business Development Manager</p>
+                            <h5 class="holder-name"><a href="#">Antonio Hoffert</a></h5>
+                            <p class="text">Economist</p>
                         </div>
                     </div>
                 </div>
@@ -419,16 +418,17 @@
                             <img src="assets/images/team-1.png" alt="Team">
                             <div class="social">
                                 <ul>
-                                    <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                                    <li><a href="#"><i class="lni-twitter-filled"></i></a></li>
-                                    <li><a href="#"><i class="lni-instagram-filled"></i></a></li>
-                                    <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
+                                    <!-- li><a href="#"><i class="lni-facebook-filled"></i></a></li -->
+                                    <li><a href="https://twitter.com/raugfer"><i class="lni-twitter-filled"></i></a></li>
+                                    <li><a href="https://github.com/raugfer"><i class="lni-github-original"></i></a></li>
+                                    <!-- li><a href="#"><i class="lni-instagram-filled"></i></a></li -->
+                                    <li><a href="https://www.linkedin.com/in/raugfer"><i class="lni-linkedin-original"></i></a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="team-content">
-                            <h5 class="holder-name"><a href="#">Isabela Moreira</a></h5>
-                            <p class="text">Founder and CEO</p>
+                            <h5 class="holder-name"><a href="#">Rodrigo Ferreira</a></h5>
+                            <p class="text">Developer</p>
                         </div>
                     </div>
                 </div>
@@ -438,16 +438,17 @@
                             <img src="assets/images/team-2.png" alt="Team">
                             <div class="social">
                                 <ul>
-                                    <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                                    <li><a href="#"><i class="lni-twitter-filled"></i></a></li>
-                                    <li><a href="#"><i class="lni-instagram-filled"></i></a></li>
-                                    <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
+                                    <!-- li><a href="#"><i class="lni-facebook-filled"></i></a></li -->
+                                    <!-- li><a href="#"><i class="lni-twitter-filled"></i></a></li -->
+                                    <li><a href="https://github.com/gleissonassis"><i class="lni-github-original"></i></a></li>
+                                    <!-- li><a href="#"><i class="lni-instagram-filled"></i></a></li -->
+                                    <li><a href="https://www.linkedin.com/in/gleissonassis"><i class="lni-linkedin-original"></i></a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="team-content">
-                            <h5 class="holder-name"><a href="#">Elon Musk</a></h5>
-                            <p class="text">Sr. Software Engineer</p>
+                            <h5 class="holder-name"><a href="#">Gleisson Assis</a></h5>
+                            <p class="text">Developer</p>
                         </div>
                     </div>
                 </div>
