--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 <div class="col-lg-5">
                     <div class="section-title text-center pb-30">
                         <div class="line m-auto"></div>
-                        <h3 class="title"><span>Meet Our</span> Creative Team Members</h3>
+                        <h3 class="title"><span>Meet Our</span> Team Members</h3>
                     </div>
                 </div>
             </div>
