--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
     <footer id="footer" class="footer-area pt-120">
         <div class="container">
             <div class="subscribe-area wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
-                <!-- div class="row">
+                <div class="row">
                     <div class="col-lg-6">
                         <div class="subscribe-content mt-45">
                             <h2 class="subscribe-title">Subscribe Our Newsletter <span>get reguler updates</span></h2>
@@ -477,7 +477,7 @@
                             </form>
                         </div>
                     </div>
-                 </div --> <!-- row -->
+                 </div> <!-- row -->
             </div> <!-- subscribe area -->
             <div class="footer-widget pb-100">
                 <div class="row">
