Atualizações de Textos

--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
                             <i class="lni-baloon"></i>
                         </div>
                         <div class="services-content mt-30">
-                            <h4 class="services-title"><a href="#">Clean</a></h4>
-                            <p class="text">Lorem ipsum dolor sit amet,consetetur sadipscing elitr, seddiam nonu eirmod tempor invidunt labore.</p>
-                            <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>
+                            <h4 class="services-title"><a href="#">Securitize NFTs</a></h4>
+                            <p class="text">Get Shares baked by a NFT. Stake a ERC-721 in Nftfy contract and get ERC-20 Tokens.</p>
+ <!--   <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a> -->
                         </div>
                     </div> <!-- single services -->
                 </div>
@@ -198,9 +198,9 @@
                             <i class="lni-cog"></i>
                         </div>
                         <div class="services-content mt-30">
-                            <h4 class="services-title"><a href="#">Robust</a></h4>
-                            <p class="text">Lorem ipsum dolor sit amet,consetetur sadipscing elitr, seddiam nonu eirmod tempor invidunt labore.</p>
-                            <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>
+                            <h4 class="services-title"><a href="#">Exchange Shares</a></h4>
+                            <p class="text">Share the ownership of a NFT with friends or unknown parties.</p>
+           <!--                 <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>  -->
                         </div>
                     </div> <!-- single services -->
                 </div>
@@ -212,9 +212,9 @@
                             <i class="lni-bolt-alt"></i>
                         </div>
                         <div class="services-content mt-30">
-                            <h4 class="services-title"><a href="#">Powerful</a></h4>
-                            <p class="text">Lorem ipsum dolor sit amet,consetetur sadipscing elitr, seddiam nonu eirmod tempor invidunt labore.</p>
-                            <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>
+                            <h4 class="services-title"><a href="#">Appreciate Your Token</a></h4>
+                            <p class="text">Create liquidity through Network Effects with many other interested parties.</p>
+             <!--               <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>    -->
                         </div>
                     </div> <!-- single services -->
                 </div>
@@ -228,9 +228,9 @@
                             <i class="lni-baloon"></i>
                         </div>
                         <div class="services-content mt-30">
-                            <h4 class="services-title"><a href="#">Clean</a></h4>
-                            <p class="text">Lorem ipsum dolor sit amet,consetetur sadipscing elitr, seddiam nonu eirmod tempor invidunt labore.</p>
-                            <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>
+                            <h4 class="services-title"><a href="#">Launch a SDO</a></h4>
+                            <p class="text">Perform a Security Public Offering directly in a Decentralized Exchange (Dex) and with guaranteed liquidity to the investors.</p>
+                 <!--           <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>  -->
                         </div>
                     </div> <!-- single services -->
                 </div>
@@ -242,9 +242,9 @@
                             <i class="lni-cog"></i>
                         </div>
                         <div class="services-content mt-30">
-                            <h4 class="services-title"><a href="#">Robust</a></h4>
-                            <p class="text">Lorem ipsum dolor sit amet,consetetur sadipscing elitr, seddiam nonu eirmod tempor invidunt labore.</p>
-                            <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>
+                            <h4 class="services-title"><a href="#">Decentralized Backing Mechanism</a></h4>
+                            <p class="text">Easily create a Security through the Decentralized Backing Mechanism that is immune to coercion and censorship.</p>
+   <!--                           <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>     -->
                         </div>
                     </div> <!-- single services -->
                 </div>
@@ -263,10 +263,10 @@
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title">Quick & Easy <span>to Use Bootstrap Template</span></h3>
+                            <h3 class="title">Choose your best NFT <span>and stake it on Nftfy, make your rules and get Shares</span></h3>
                         </div> <!-- section title -->
-                        <p class="text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, seiam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing.</p>
-                        <a href="#" class="main-btn">Try it Free</a>
+                        <p class="text">You easily stake a ERC721 on Nftfy, create the rules to stake the NFT and get back 100% of the Shares to spread with your friends or unknown parties. The contract manage the stake without special actors, thus, only complying the rules to get the NFT back. </p>
+                        <a href="#" class="main-btn">Securitize now</a>
                     </div> <!-- about content -->
                 </div>
                 <div class="col-lg-6">
@@ -295,10 +295,10 @@
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title">Modern design <span> with Essential Features</span></h3>
+                            <h3 class="title">Launch Your SDO<span> Security Dex Offering</span></h3>
                         </div> <!-- section title -->
-                        <p class="text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, seiam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing.</p>
-                        <a href="#" class="main-btn">Try it Free</a>
+                        <p class="text">Build a liquidity market to your Shares and release your ERC20 tokens to the Public enabling easily exchange through the Liquidity Bootstrapping Pool (BLP) from Balancer and Uniswap</p>
+                        <a href="#" class="main-btn">Launch a SDO</a>
                     </div> <!-- about content -->
                 </div>
                 <div class="col-lg-6 order-lg-first">
@@ -321,10 +321,10 @@
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title"><span>Crafted for</span> SaaS, App and Software Landing Page</h3>
+                            <h3 class="title"><span>Explore all the features of the</span>DeFi Ecosystem with your newly tokens</h3>
                         </div> <!-- section title -->
-                        <p class="text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, seiam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing.</p>
-                        <a href="#" class="main-btn">Try it Free</a>
+                        <p class="text">Once created a high liquidity market, The Securities Tokens can enjoy of all the features of the DeFi Ecosystem like Lending, Borrowing, Derivatives, Flash Loans, etc.</p>
+                        <a href="#" class="main-btn">Know More</a>
                     </div> <!-- about content -->
                 </div>
                 <div class="col-lg-6">
@@ -466,7 +466,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="subscribe-content mt-45">
-                            <h2 class="subscribe-title">Subscribe Our Newsletter <span>get reguler updates</span></h2>
+                            <h2 class="subscribe-title">Subscribe Our Newsletter <span>get regular updates</span></h2>
                         </div>
                     </div>
                     <div class="col-lg-6">
