--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-10">
-                    <div class="section-title text-center pb-40">
+                    <!-- div class="section-title text-center pb-40">
                         <div class="line m-auto"></div>
                         <h3 class="title">Clean and simple design, <span> Comes with everything you need to get started!</span></h3>
-                    </div> <!-- section title -->
+                    </div --> <!-- section title -->
                 </div>
             </div> <!-- row -->
             <div class="row justify-content-center">
