--- a/index.html
+++ b/index.html
@@ -486,7 +486,9 @@
                             <a class="logo" href="#">
                                 <img src="assets/images/logo.svg" alt="logo">
                             </a>
-                            <p class="text">Lorem ipsum dolor sit amet consetetur sadipscing elitr, sederfs diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</p>
+                            <p class="text">
+Nftfy is open source software and wants to contribute to the NFT and DeFi ecosystems.
+Did you like the project? Join our Telegram group and be part of it. t.me/nftfySec</p>
                             <ul class="social">
                                 <!-- li><a href="#"><i class="lni-facebook-filled"></i></a></li -->
                                 <li><a href="https://twitter.com/nftfysec"><i class="lni-twitter-filled"></i></a></li>
