--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                             </a>
                             <p class="text">
 Nftfy is open source software and wants to contribute to the NFT and DeFi ecosystems.
-Did you like the project? Join our Telegram group and be part of it. t.me/nftfySec</p>
+Did you like the project? Join our Telegram group and be part of it. https://t.me/nftfySec</p>
                             <ul class="social">
                                 <!-- li><a href="#"><i class="lni-facebook-filled"></i></a></li -->
                                 <li><a href="https://twitter.com/nftfysec"><i class="lni-twitter-filled"></i></a></li>
