Adjustments to the landing page text

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             </div> <!-- navbar collapse -->
 
                             <div class="navbar-btn d-none d-sm-inline-block">
-                                <a class="main-btn" data-scroll-nav="0" href="#whitepaper">Whitepaper</a>
+                                <a class="main-btn" data-scroll-nav="0" href="https://drive.google.com/file/d/1B4b8jV3QDxGPO-Xg_JAtiKbd2O6y8cV7/view">Whitepaper</a>
                             </div>
                         </nav> <!-- navbar -->
                     </div>
@@ -466,7 +466,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="subscribe-content mt-45">
-                            <h2 class="subscribe-title">Subscribe Our Newsletter <span>get regular updates</span></h2>
+                            <h2 class="subscribe-title">Subscribe To Our List <span>and be the first to know when we launch</span></h2>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -487,8 +487,8 @@
                                 <img src="assets/images/logo.svg" alt="logo">
                             </a>
                             <p class="text">
-Nftfy is open source software and wants to contribute to the NFT and DeFi ecosystems.
-Did you like the project? Join our Telegram group and be part of it. https://t.me/nftfySec</p>
+                                Nftfy is open source software and our contribution to the NFT and DeFi ecosystems.
+                                Do you like the project? Join our Telegram group to be part of it.</p>
                             <ul class="social">
                                 <!-- li><a href="#"><i class="lni-facebook-filled"></i></a></li -->
                                 <li><a href="https://twitter.com/nftfysec"><i class="lni-twitter-filled"></i></a></li>
@@ -517,8 +517,8 @@ Did you like the project? Join our Telegram group and be part of it. https://t.m
                                     <h4 class="title">Resources</h4>
                                 </div>
                                 <ul class="link">
-                                    <li><a href="#">Whitepaper</a></li>
-                                    <li><a href="#">Presentation</a></li>
+                                    <li><a href="https://drive.google.com/file/d/1B4b8jV3QDxGPO-Xg_JAtiKbd2O6y8cV7/view">Whitepaper</a></li>
+                                    <li><a href="https://docs.google.com/presentation/d/1k4k7XW3IKsqm2Je3JHS1SqsGLlK3B-Md2nOeTYpo-S8/view">Presentation</a></li>
                                     <li><a href="https://github.com/nftfy/nftfy-core/tree/master/src">Smart Contracts</a></li>
                                     <!-- li><a href="#">Home</a></li -->
                                     <!-- li><a href="#">Page</a></li -->
@@ -532,7 +532,8 @@ Did you like the project? Join our Telegram group and be part of it. https://t.m
                                     <h4 class="title">Contact Us</h4>
                                 </div>
                                 <ul class="link">
-                                    <li><a href="mailto:help@nftfy.tk">help@nftfy.tk</a></li>
+                                    <li><a href="mailto:help@nftfy.tk">E-mail</a></li>
+                                    <li><a href="https://t.me/nftfySec">Telegram</a></li>
                                 </ul>
                             </div> <!-- footer wrapper -->
                         </div> <!-- footer link -->
