--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <h3 class="header-sub-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Nftfy - NFT Securitizer</h3>
                             <h2 class="header-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">Securitize Non Fungibles</h2>
                             <p class="text wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">Bring collective ownership and instant liquidity to your ERC-721 tokens</p>
-                            <a href="https://rebrand.ly/basic-ud" rel="nofollow" class="main-btn wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.1s">Start Now</a>
+                            <a href="/dapp/" rel="nofollow" class="main-btn wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.1s">Start Now</a>
                         </div> <!-- header hero content -->
                     </div>
                 </div> <!-- row -->
@@ -140,21 +140,21 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="brand-logo d-flex align-items-center justify-content-center justify-content-md-between">
-                        <div class="single-logo mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+                        <!-- div class="single-logo mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                             <img src="assets/images/brand-1.png" alt="brand">
-                        </div> <!-- single logo -->
-                        <div class="single-logo mt-30 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.2s">
+                        </div --> <!-- single logo -->
+                        <!-- div class="single-logo mt-30 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.2s">
                             <img src="assets/images/brand-2.png" alt="brand">
-                        </div> <!-- single logo -->
-                        <div class="single-logo mt-30 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.3s">
+                        </div --> <!-- single logo -->
+                        <!-- div class="single-logo mt-30 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.3s">
                             <img src="assets/images/brand-3.png" alt="brand">
-                        </div> <!-- single logo -->
-                        <div class="single-logo mt-30 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.4s">
+                        </div --> <!-- single logo -->
+                        <!-- div class="single-logo mt-30 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.4s">
                             <img src="assets/images/brand-4.png" alt="brand">
-                        </div> <!-- single logo -->
-                        <div class="single-logo mt-30 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.5s">
+                        </div --> <!-- single logo -->
+                        <!-- div class="single-logo mt-30 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.5s">
                             <img src="assets/images/brand-5.png" alt="brand">
-                        </div> <!-- single logo -->
+                        </div --> <!-- single logo -->
                     </div> <!-- brand logo -->
                 </div>
             </div>   <!-- row -->
@@ -266,7 +266,7 @@
                             <h3 class="title">Choose your best NFT <span>and stake it on Nftfy, make your rules and get Shares</span></h3>
                         </div> <!-- section title -->
                         <p class="text">You easily stake a ERC721 on Nftfy, create the rules to stake the NFT and get back 100% of the Shares to spread with your friends or unknown parties. The contract manage the stake without special actors, thus, only complying the rules to get the NFT back. </p>
-                        <a href="#" class="main-btn">Securitize now</a>
+                        <a href="/dapp/" class="main-btn">Securitize now</a>
                     </div> <!-- about content -->
                 </div>
                 <div class="col-lg-6">
@@ -298,7 +298,7 @@
                             <h3 class="title">Launch Your SDO<span> Security Dex Offering</span></h3>
                         </div> <!-- section title -->
                         <p class="text">Build a liquidity market to your Shares and release your ERC20 tokens to the Public enabling easily exchange through the Liquidity Bootstrapping Pool (BLP) from Balancer and Uniswap</p>
-                        <a href="#" class="main-btn">Launch a SDO</a>
+                        <a href="/dapp/" class="main-btn">Launch a SDO</a>
                     </div> <!-- about content -->
                 </div>
                 <div class="col-lg-6 order-lg-first">
@@ -324,7 +324,7 @@
                             <h3 class="title"><span>Explore all the features of the</span>DeFi Ecosystem with your newly tokens</h3>
                         </div> <!-- section title -->
                         <p class="text">Once created a high liquidity market, The Securities Tokens can enjoy of all the features of the DeFi Ecosystem like Lending, Borrowing, Derivatives, Flash Loans, etc.</p>
-                        <a href="#" class="main-btn">Know More</a>
+                        <a href="/dapp/" class="main-btn">Know More</a>
                     </div> <!-- about content -->
                 </div>
                 <div class="col-lg-6">
@@ -466,7 +466,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="subscribe-content mt-45">
-                            <h2 class="subscribe-title">Subscribe To Our List <span>and be the first to know when we launch</span></h2>
+                            <h2 class="subscribe-title">Subscribe To Know <span>when we launch</span></h2>
                         </div>
                     </div>
                     <div class="col-lg-6">
