--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                             <i class="lni-cog"></i>
                         </div>
                         <div class="services-content mt-30">
-                            <h4 class="services-title"><a href="#">Exchange Shares</a></h4>
+                            <h4 class="services-title"><a href="#">Trade Its Shares</a></h4>
                             <p class="text">Share the ownership of a NFT with friends or unknown parties.</p>
            <!--                 <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>  -->
                         </div>
@@ -212,7 +212,7 @@
                             <i class="lni-bolt-alt"></i>
                         </div>
                         <div class="services-content mt-30">
-                            <h4 class="services-title"><a href="#">Appreciate Your Token</a></h4>
+                            <h4 class="services-title"><a href="#">Increase Token Value</a></h4>
                             <p class="text">Create liquidity through Network Effects with many other interested parties.</p>
              <!--               <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>    -->
                         </div>
