Updates team profiles

--- a/index.html
+++ b/index.html
@@ -368,8 +368,8 @@
                             </div>
                         </div>
                         <div class="team-content">
-                            <h5 class="holder-name"><a href="#">Leonardo Carvalho</a></h5>
-                            <p class="text">Entrepreneur</p>
+                            <h5 class="holder-name">Leonardo Carvalho</h5>
+                            <p class="text">Electrical Engineer</p>
                         </div>
                     </div>
                 </div>
@@ -386,7 +386,7 @@
                             </div>
                         </div>
                         <div class="team-content">
-                            <h5 class="holder-name"><a href="#">Andre Salles</a></h5>
+                            <h5 class="holder-name">Andre Salles</h5>
                             <p class="text">Lawyer</p>
                         </div>
                     </div>
@@ -405,7 +405,7 @@
                             </div>
                         </div>
                         <div class="team-content">
-                            <h5 class="holder-name"><a href="#">Antonio Hoffert</a></h5>
+                            <h5 class="holder-name">Antonio Hoffert</h5>
                             <p class="text">Economist</p>
                         </div>
                     </div>
@@ -415,7 +415,7 @@
                 <div class="col-lg-4 col-md-7 col-sm-8">
                     <div class="single-team text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                         <div class="team-image">
-                            <img src="assets/images/team-1.png" alt="Team">
+                            <img src="assets/images/team-4.png" alt="Team">
                             <div class="social">
                                 <ul>
                                     <!-- li><a href="#"><i class="lni-facebook-filled"></i></a></li -->
@@ -427,7 +427,7 @@
                             </div>
                         </div>
                         <div class="team-content">
-                            <h5 class="holder-name"><a href="#">Rodrigo Ferreira</a></h5>
+                            <h5 class="holder-name">Rodrigo Ferreira</h5>
                             <p class="text">Developer</p>
                         </div>
                     </div>
@@ -435,7 +435,7 @@
                 <div class="col-lg-4 col-md-7 col-sm-8">
                     <div class="single-team text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="team-image">
-                            <img src="assets/images/team-2.png" alt="Team">
+                            <img src="assets/images/team-5.png" alt="Team">
                             <div class="social">
                                 <ul>
                                     <!-- li><a href="#"><i class="lni-facebook-filled"></i></a></li -->
@@ -447,7 +447,7 @@
                             </div>
                         </div>
                         <div class="team-content">
-                            <h5 class="holder-name"><a href="#">Gleisson Assis</a></h5>
+                            <h5 class="holder-name">Gleisson Assis</h5>
                             <p class="text">Developer</p>
                         </div>
                     </div>
