--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                         </div>
                         <div class="team-content">
                             <h5 class="holder-name">Leonardo Carvalho</h5>
-                            <p class="text">Electrical Engineer</p>
+                            <p class="text">Electronic Engineer</p>
                         </div>
                     </div>
                 </div>
