--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                                 </div>
                                 <ul class="link">
                                     <li><a href="https://drive.google.com/file/d/1B4b8jV3QDxGPO-Xg_JAtiKbd2O6y8cV7/view">Whitepaper</a></li>
-                                    <li><a href="https://docs.google.com/presentation/d/1k4k7XW3IKsqm2Je3JHS1SqsGLlK3B-Md2nOeTYpo-S8/view">Presentation</a></li>
+                                    <li><a href="https://docs.google.com/presentation/d/1k4k7XW3IKsqm2Je3JHS1SqsGLlK3B-Md2nOeTYpo-S8/edit?usp=sharing">Presentation</a></li>
                                     <li><a href="https://github.com/nftfy/nftfy-core/tree/master/src">Smart Contracts</a></li>
                                     <!-- li><a href="#">Home</a></li -->
                                     <!-- li><a href="#">Page</a></li -->
