--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         </div>
                         <div class="services-content mt-30">
                             <h4 class="services-title"><a href="#">Securitize NFTs</a></h4>
-                            <p class="text">Get Shares baked by a NFT. Stake a ERC-721 in Nftfy contract and get ERC-20 Tokens.</p>
+                            <p class="text">Get Shares baked by a NFT. Stake an ERC-721 in Nftfy contract and get ERC-20 Tokens.</p>
  <!--   <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a> -->
                         </div>
                     </div> <!-- single services -->
@@ -265,7 +265,7 @@
                             <div class="line"></div>
                             <h3 class="title">Choose your best NFT <span>and stake it on Nftfy, make your rules and get Shares</span></h3>
                         </div> <!-- section title -->
-                        <p class="text">You easily stake a ERC721 on Nftfy, create the rules to stake the NFT and get back 100% of the Shares to spread with your friends or unknown parties. The contract manage the stake without special actors, thus, only complying the rules to get the NFT back. </p>
+                        <p class="text">You easily stake an ERC721 on Nftfy, create the rules to stake the NFT and get back 100% of the Shares to spread with your friends or unknown parties. The contract manage the stake without special actors, thus, only complying the rules to get the NFT back. </p>
                         <a href="/dapp/" class="main-btn">Securitize now</a>
                     </div> <!-- about content -->
                 </div>
