--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="col-lg-8">
                         <div class="header-hero-content text-center">
                             <h3 class="header-sub-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Nftfy - NFT Securitizer</h3>
-                            <h2 class="header-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">Securitize Non Fungibles</h2>
+                            <h2 class="header-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">Securitization for DeFi</h2>
                             <p class="text wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">Bring collective ownership and instant liquidity to your ERC-721 tokens</p>
                             <a href="/dapp/" rel="nofollow" class="main-btn wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.1s">Start Now</a>
                         </div> <!-- header hero content -->
@@ -185,7 +185,7 @@
                         </div>
                         <div class="services-content mt-30">
                             <h4 class="services-title"><a href="#">Securitize NFTs</a></h4>
-                            <p class="text">Get Shares baked by a NFT. Stake an ERC-721 in Nftfy contract and get ERC-20 Tokens.</p>
+                            <p class="text">Get Shares fully backed by NFTs. Stake your ERC721 tokens in Nftfy and receive ERC20 tokens.</p>
  <!--   <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a> -->
                         </div>
                     </div> <!-- single services -->
@@ -198,8 +198,8 @@
                             <i class="lni-cog"></i>
                         </div>
                         <div class="services-content mt-30">
-                            <h4 class="services-title"><a href="#">Trade Its Shares</a></h4>
-                            <p class="text">Share the ownership of a NFT with friends or unknown parties.</p>
+                            <h4 class="services-title"><a href="#">Trade Shares</a></h4>
+                            <p class="text">Share the ownership of a NFT with friends or third parties.</p>
            <!--                 <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>  -->
                         </div>
                     </div> <!-- single services -->
@@ -229,7 +229,7 @@
                         </div>
                         <div class="services-content mt-30">
                             <h4 class="services-title"><a href="#">Launch a SDO</a></h4>
-                            <p class="text">Perform a Security Public Offering directly in a Decentralized Exchange (Dex) and with guaranteed liquidity to the investors.</p>
+                            <p class="text">Launch a Security Public Offering through a Decentralized Exchange (Dex) and ensure liquidity for the investors.</p>
                  <!--           <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>  -->
                         </div>
                     </div> <!-- single services -->
@@ -242,8 +242,8 @@
                             <i class="lni-cog"></i>
                         </div>
                         <div class="services-content mt-30">
-                            <h4 class="services-title"><a href="#">Decentralized Backing Mechanism</a></h4>
-                            <p class="text">Easily create a Security through the Decentralized Backing Mechanism that is immune to coercion and censorship.</p>
+                            <h4 class="services-title"><a href="#">Lex Cryptographia</a></h4>
+                            <p class="text">The contract guarantees the backing of the securities, as well as all the rights of the participants.</p>
    <!--                           <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>     -->
                         </div>
                     </div> <!-- single services -->
@@ -297,7 +297,7 @@
                             <div class="line"></div>
                             <h3 class="title">Launch Your SDO<span> Security Dex Offering</span></h3>
                         </div> <!-- section title -->
-                        <p class="text">Build a liquidity market to your Shares and release your ERC20 tokens to the Public enabling easily exchange through the Liquidity Bootstrapping Pool (BLP) from Balancer and Uniswap</p>
+                        <p class="text">Build a liquidity market to your Shares and release your ERC20 tokens to the Public enabling easily exchange through the Liquidity Bootstrapping Pool (BLP) from Balancer.</p>
                         <a href="/dapp/" class="main-btn">Launch a SDO</a>
                     </div> <!-- about content -->
                 </div>
